gitops/stage03-model-monitoring/observability/otel-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-opentelemetry-operator
