gitops/stage03-model-monitoring/observability/grafana-instance.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: private-ai-demo
spec:
  to:
    kind: Service
    name: grafana-service
  port:
    targetPort: grafana
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
